@@ -1,3 +1,3 @@
 #!/bin/bash
-export JAVA_TOOL_OPTIONS="--enable-native-access=ALL-UNNAMED"
+export JAVA_TOOL_OPTIONS="--add-opens=java.base/java.lang=ALL-UNNAMED"
 mvn compile quarkus:dev -f ../
